--- a/quarkus/defaults/src/main/resources/application.properties
+++ b/quarkus/defaults/src/main/resources/application.properties
@@ -109,7 +109,9 @@ polaris.realm-context.header-name=Polaris-Realm
 polaris.realm-context.require-header=false
 
 polaris.features."ENFORCE_PRINCIPAL_CREDENTIAL_ROTATION_REQUIRED_CHECKING"=false
-polaris.features."SUPPORTED_CATALOG_STORAGE_TYPES"=["S3","GCS","AZURE"]
+polaris.features."SUPPORTED_CATALOG_STORAGE_TYPES"=["S3","GCS","AZURE","FILE"]
+polaris.features."ALLOW_INSECURE_STORAGE_TYPES"=true
+polaris.readiness.ignore-severe-issues=true
 # polaris.features."ENABLE_CATALOG_FEDERATION"=true
 polaris.features."SUPPORTED_CATALOG_CONNECTION_TYPES"=["ICEBERG_REST"]
 
@@ -118,13 +120,19 @@ polaris.features."SUPPORTED_CATALOG_CONNECTION_TYPES"=["ICEBERG_REST"]
 
 # polaris.persistence.type=eclipse-link
 # polaris.persistence.type=in-memory-atomic
-polaris.persistence.type=in-memory
+# polaris.persistence.type=in-memory
+polaris.persistence.type=relational-jdbc
+quarkus.datasource.db-kind=pgsql
+quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/POLARIS
+quarkus.datasource.username=postgres
+quarkus.datasource.password=postgres
 
 polaris.secrets-manager.type=in-memory
 
 polaris.file-io.type=default
 
-polaris.event-listener.type=no-op
+polaris.event-listener.type=persistence-in-memory-buffer
+# polaris.event-listener.buffer.time=-1
 
 polaris.log.request-id-header-name=Polaris-Request-Id
 # polaris.log.mdc.aid=polaris
