Remove all wildcard imports

--- a/getting-started/assets/postgres/docker-compose-postgres.yml
+++ b/getting-started/assets/postgres/docker-compose-postgres.yml
@@ -47,7 +47,7 @@ services:
     depends_on:
       postgres:
         condition: service_healthy
-#  polaris:
-#    depends_on:
-#      postgres:
-#        condition: service_healthy
+  polaris:
+    depends_on:
+      postgres:
+        condition: service_healthy
